[package]
name = "cc"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }

rand = "0.10"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
redb = "3.1"
anyhow = "1"

[[bin]]
name = "cc-server"
path = "cc.rs"